# keywallet

./: .gitignore  AddUser.qml  CMakeLists.txt  CMakeSettings.json  Login.qml  README.md  SpyBot.qss  UserPortal.qml  conanfile.txt  config.db  credential_store.cpp  credential_store.h  kw_session.cpp  kw_session.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  resources.qrc
